# robo-camp

./: LICENSE  README.md  pyproject.toml
week1/beginner_tutorials/: CMakeLists.txt  package.xml
week1/beginner_tutorials/scripts/: talker.py
week1/beginner_tutorials_cpp/: CMakeLists.txt  package.xml
week1/beginner_tutorials_cpp/src/: talker.cpp
week1/custom_turtlebot_world/: CMakeLists.txt  package.xml
week1/custom_turtlebot_world/launch/: custom.launch
week1/turtle-move-square/: CMakeLists.txt  package.xml
week1/turtle-move-square/src/: move_square.py
week4/: MNIST-Classifier.ipynb
