[tool.poetry]
name = "robo-camp"
version = "0.1.0"
description = ""
authors = ["Sagnik Mandal <acriticalcynic@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.1"
torchvision = "^0.18.1"
ipykernel = "^6.29.4"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
